# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  secret.env  setup.cfg
.github/workflows/: pyci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: bootstrap.min.css  styles.css  theme_toggle.js
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py
task_manager/statuses/: admin.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options.py
task_manager/tasks/: admin.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_labelm2m_task_label.py  0005_alter_task_executor.py  0006_alter_task_executor.py  0007_remove_task_label_task_labels.py  0008_alter_task_options.py
task_manager/templates/: base.html  search.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  show.html  update.html
task_manager/templates/user/: index.html  show.html
task_manager/templates/users/: create.html  delete.html  index.html  login.html  show.html  update.html
task_manager/user/: urls.py  views.py
task_manager/users/: factories.py  forms.py  models.py  tests.py  urls.py  views.py
